<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#EDEDED"
    tools:context=".Complain">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/bright"
        android:padding="6dp">

        <ImageButton
            android:id="@+id/backbutton"
            android:layout_width="55dp"
            android:layout_height="55dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:src="@drawable/backarrow"
            android:contentDescription="@string/backarrow_desc"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/createcomplaint"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_centerInParent="true"
            android:contentDescription="@string/createcomplaint"/>
    </RelativeLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Uploadafile"
        android:textColor="@android:color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        android:contentDescription="@string/Uploadafile"
        android:layout_marginStart="40dp"
        android:layout_marginTop="20dp"/>

    <RelativeLayout
        android:id="@+id/upload_area"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:layout_marginTop="5dp">

        <ImageView
            android:id="@+id/uploadarea"
            android:layout_width="660dp"
            android:layout_height="140dp"
            android:contentDescription="@string/uploadarea_desc"
            android:src="@drawable/uploadarea"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"
            />

        <ImageView
            android:id="@+id/uploadbtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="15dp"
            android:contentDescription="@string/uploadbtn"
            android:src="@drawable/uploadbtn"
            android:layout_marginStart="12dp"
            />

    </RelativeLayout>

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title"
        android:textSize="20sp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="20dp"
        android:padding="6dp"
        android:textColor="#000000"
        android:textStyle="bold"
        android:contentDescription="@string/title"/>

    <EditText
        android:id="@+id/titleview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/entertitle"
        android:padding="12dp"
        android:background="@drawable/textbackground"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:textSize="18sp"
        android:autofillHints="text"
        android:inputType="text"
        android:layout_marginTop="5dp"/>
    <TextView
        android:id="@+id/type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:textSize="20sp"
        android:layout_marginStart="30dp"
        android:padding="6dp"
        android:textColor="#000000"
        android:text="@string/type_label"
        android:textStyle="bold"/>

    <Spinner
        android:id="@+id/type_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/textbackground"
        android:padding="12dp"
        android:minHeight="48dp"/>

    <TextView
        android:id="@+id/decprition"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/description_label"
        android:textSize="20sp"
        android:layout_marginStart="30dp"
        android:padding="6dp"
        android:textColor="#000000"
        android:textStyle="bold"
        android:layout_marginTop="20dp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/descriptionbox"
        android:padding="12dp"
        android:background="@drawable/textbackground"
        android:layout_marginLeft="38dp"
        android:layout_marginRight="38dp"
        android:textSize="18sp"
        android:autofillHints="text"
        android:layout_marginTop="5dp"
        android:id="@+id/descriptionbox"
        android:inputType="textMultiLine|textCapSentences"/>

    <Button
        android:id="@+id/next_button"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:text="@string/next_button"
        android:textSize="25sp"
        android:textStyle="bold"
        android:textColor="@android:color/white"
        android:backgroundTint="@color/bright"
        android:padding="16dp"
        android:layout_marginTop="25dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"/>
</LinearLayout>
