<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/light_gray"
    >
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/bright"
        android:padding="6dp">

        <ImageButton
            android:id="@+id/backButton"
            android:layout_width="48dp"
            android:layout_height="55dp"
            android:layout_alignParentStart="true"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:src="@drawable/backarrow"
            android:contentDescription="@string/backarrow_desc"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="52dp"
            android:layout_centerHorizontal="true"
            android:text="@string/feedback"
            android:textColor="@color/light"
            android:textSize="35sp"
            android:textStyle="bold"
            android:layout_marginTop="6dp" />
    </RelativeLayout>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_full_name"
        android:layout_marginTop="30dp"
        android:padding="20dp"
        android:background="@drawable/textbackground"
        android:layout_marginBottom="16dp"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        android:autofillHints="fullname"
        android:inputType="textPersonName"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_email"
        android:padding="20dp"
        android:layout_marginTop="25dp"
        android:background="@drawable/textbackground"
        android:layout_marginBottom="16dp"
        android:inputType="textEmailAddress"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        android:autofillHints="email"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/entermobile"
        android:padding="20dp"
        android:layout_marginTop="25dp"
        android:background="@drawable/textbackground"
        android:layout_marginBottom="16dp"
        android:inputType="phone"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        android:autofillHints="mobile"
        />


    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/message"
        android:padding="20dp"
        android:layout_marginTop="25dp"
        android:background="@drawable/textbackground"
        android:layout_marginBottom="16dp"
        android:inputType="textMultiLine"
        android:lines="4"
        android:minLines="3"
        android:gravity="top"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        android:autofillHints="message"
        />


    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/submitbtn"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@android:color/white"
        android:backgroundTint="@color/bright"
        android:padding="16dp"
        android:layout_marginTop="25dp"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp" />
</LinearLayout>
