<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:scaleType="fitXY"
        android:src="@drawable/elipse1"
        tools:ignore="ContentDescription" />

    <LinearLayout
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginTop="85dp"
        android:layout_marginStart="100dp"
        android:background="@drawable/splashscreen"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/logo_image"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginTop="25dp"
            android:layout_marginStart="60dp"
            android:layout_marginBottom="50dp"
            android:src="@drawable/logo"
            android:contentDescription="@string/mobile" />

        <ImageView
            android:id="@+id/text"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_marginTop="-100dp"
            android:layout_marginStart="0dp"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/resolveit"
            android:contentDescription="@string/resolveittext" />

    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="240dp">

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="32dp"
            android:layout_marginBottom="10dp"
            app:cardCornerRadius="46dp"
            app:cardElevation="50dp"
            app:cardMaxElevation="100dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="20dp">

                <TextView
                    android:id="@+id/tvWelcome"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="0dp"
                    android:text="@string/welcome"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:layout_gravity="center" />

                <EditText
                    android:id="@+id/userid"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:autofillHints="User Id"
                    android:drawablePadding="10dp"
                    android:hint="@string/userid"
                    android:padding="15dp"
                    android:inputType="textUri"
                    android:textColor="@color/black" />

                <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:autofillHints="password"
                    android:drawablePadding="10dp"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:padding="15dp"
                    android:textColor="@color/black" />
                <TextView
                    android:id="@+id/tvforgetpassword"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Forget password?"
                    android:textColor="@android:color/holo_blue_dark"
                    android:textSize="12sp"
                    android:contentDescription="forgetpassword?"
                    android:padding="2dp"
                    />


                <Button
                    android:id="@+id/btnLogin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:backgroundTint="@color/color"
                    android:padding="12dp"
                    android:text="@string/login"
                    android:textColor="@android:color/white"
                    android:layout_gravity="center_horizontal"
                    android:textSize="20sp" />
                <TextView
                    android:id="@+id/tvSignUp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Not yet registered?Sign In Now."
                    android:textColor="@android:color/holo_blue_dark"
                    android:textSize="12sp"
                    android:contentDescription="Sign up if you don't have an account"
                    android:padding="2dp"
                    android:layout_marginStart="120dp"/>


            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</RelativeLayout>
